--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
     <head>
         <title>Selamat Datang</title>
         <link rel="stylesheet" href="assets/style/styles.css">
@@ -8,15 +8,15 @@
     <body>
         <header>
             <div class="jumbotron">
-                <h1 id="ner">Named Entity Recognition</h1>
-                <em>Natural Language Processing</em>
+                <h1 id="home">TRA</h1>
+                <em>Transfer Rahasia Apapun</em>
             </div>
         
             <nav>
                 <ul>
-                    <li><a href="#ner">Home</a></li>
-                    <li><a href="#content">Artikel</a></li>
-                    <!--<li><a href="#content">Implementasi</a></li>-->
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#config">Config</a></li>
+                    <li><a href="#tools">Implementasi</a></li>
                     <li><a href="#profil">Profile</a></li>
                 </ul>
             </nav>
@@ -24,12 +24,17 @@
         </header>
 
         <main>
-            <div id="content">
+            <div id="configt">
                 <article class="card">
-                    <p><em>Named Entity Recognition</em> (NER) merupakan bidang NLP yang dapat mengenali jenis entitas pada kata dalam sebuah kalimat.</p><p>NER juga dapat digunakan untuk bidang NLP lainnya seperti Question Answering System, Chatbot, dan sebagainya.</p><p>Algoritma yang biasanya digunakan adalah Algoritma Rule-Based, Machine Learning (Supervised atau Unsupervised) dan Hybrid.</p>
+                    <p><em>List Config Internet Gratis.</em></p><p>Smartfren Unlimited FUP.</p><p><a href="https://userscloud.com/c64dy3rzhij4">config smartfrenFUP</a>.</p>
                 </article>
+            </div>
+            <div id="tools">
                 <article class="card">
-                    <p>Salah satu algoritma <em>state-of-the-art</em> pada bidang ini adalah Algoritma Machine Learning Unsupervised, seperti Bidirectional Long Short Term Memory (BiLSTM), Conditional Random Field (CRF), dan lain sebagainya</p>
+                    <p>List Tools Internet Gratis <em>state-of-the-art</em></p>
+                    <p>HTTP Injector</p>
+                    <p><a href="https://google.com/search?q=v2ray">V2RAY</a></p>
+                    <p><a href="https://google.com/search?q=vpn+game">VPN GAME</a></p>
                 </article>
             </div>
 
@@ -64,8 +69,8 @@
                 </article>
             </aside>
         </main>
-    <script src="/submission/web/assets/hi.js"></script>
+    <script src="assets/hi.js"></script>
     </body>
 
-    <footer>Dicoding &copy; 2020 &trade; IF'16</footer>
+    <footer>TRA &copy; 2020 &trade; IF'16</footer>
 </html>
