--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
     <head>
         <title>Selamat Datang</title>
         <link rel="stylesheet" href="assets/style/styles.css">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="trik,tips,internet,gratis,config,update,vpn,ssh,free">
+        <meta name="author" content="tra">
     </head>
 
     <body>
