--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <main>
             <div id="configt">
                 <article class="card">
-                    <p><em>List Config Internet Gratis.</em></p><p>Smartfren Unlimited FUP.</p><p><a href="https://userscloud.com/c64dy3rzhij4">config smartfrenFUP</a>.</p>
+                    <p><em>List Config Internet Gratis.</em></p>
+                    <p>Smartfren Unlimited FUP.</p><code><a href="https://userscloud.com/c64dy3rzhij4">config smartfrenFUP</a>.</code>
                 </article>
             </div>
             <div id="tools">
@@ -66,7 +67,7 @@
                            </tr>
                            <tr>
                                <td>Alamat</td>
-                               <td>LK.III Tanjung Raja, Ogan Ilir Palembang</td>
+                               <td><a href="#home">disini</a></td>
                            </tr>
                         </table>
                      </section>
