--- a/index.html
+++ b/index.html
@@ -77,5 +77,5 @@
     <script src="assets/hi.js"></script>
     </body>
 
-    <footer>TRA &copy; 2020 &trade; IF'16</footer>
+    <footer>TRA &copy; 2020 &trade; IF 16</footer>
 </html>
