--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
             <div id="configt">
                 <article class="card">
                     <p><em>List Config Internet Gratis.</em></p>
-                    <p>Smartfren Unlimited FUP.</p><code><a href="https://userscloud.com/c64dy3rzhij4">config smartfrenFUP</a>.</code>
+                    <p>Smartfren Unlimited FUP - <code><a href="https://userscloud.com/c64dy3rzhij4">config smartfrenFUP</a>.</code> </p>
                 </article>
             </div>
             <div id="tools">
                 <article class="card">
                     <p>List Tools Internet Gratis <em>state-of-the-art</em></p>
-                    <p>HTTP Injector</p>
-                    <p><a href="https://google.com/search?q=v2ray">V2RAY</a></p>
-                    <p><a href="https://google.com/search?q=vpn+game">VPN GAME</a></p>
+                    <code>
+                        <p>HTTP Injector</p>
+                        <p><a href="https://google.com/search?q=v2ray">V2RAY</a></p>
+                        <p><a href="https://google.com/search?q=vpn+game">VPN GAME</a></p>
+                    </code>
                 </article>
             </div>
 
