--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#config">Config</a></li>
-                    <li><a href="#tools">Implementasi</a></li>
+                    <li><a href="#tools">Tools</a></li>
                     <li><a href="#profil">Profile</a></li>
                 </ul>
             </nav>
