--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="configt">
                 <article class="card">
                     <p><em>List Config Internet Gratis.</em></p>
-                    <p>Smartfren Unlimited FUP - <code><a href="https://userscloud.com/c64dy3rzhij4">config smartfrenFUP</a>.</code> </p>
+                    <p>Smartfren Unlimited FUP - <code><a target="_blank" href="https://userscloud.com/c64dy3rzhij4">config smartfrenFUP</a>.</code> </p>
                 </article>
             </div>
             <div id="tools">
@@ -39,8 +39,8 @@
                     <p>List Tools Internet Gratis <em>state-of-the-art</em></p>
                     <code>
                         <p>HTTP Injector</p>
-                        <p><a href="https://google.com/search?q=v2ray">V2RAY</a></p>
-                        <p><a href="https://google.com/search?q=vpn+game">VPN GAME</a></p>
+                        <p><a target="_blank" href="https://google.com/search?q=v2ray">V2RAY</a></p>
+                        <p><a target="_blank" href="https://google.com/search?q=vpn+game">VPN GAME</a></p>
                     </code>
                 </article>
             </div>
@@ -69,7 +69,7 @@
                            </tr>
                            <tr>
                                <td>Alamat</td>
-                               <td><a href="#home">disini</a></td>
+                               <td><a href="/">disini</a></td>
                            </tr>
                         </table>
                      </section>
