--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
 
         <main>
-            <div id="configt">
+            <div id="config">
                 <article class="card">
                     <p><em>List Config Internet Gratis.</em></p>
                     <p>Smartfren Unlimited FUP - <code><a target="_blank" href="https://userscloud.com/c64dy3rzhij4">config smartfrenFUP</a>.</code> </p>
