--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                      <header>
                          <h2>My Profile</h2>
                          <figure>
-                            <img src="assets/img/pas.jpg" alt="Foto">
-                            <figcaption>Septri Putra Wiarka</figcaption>
+                            <img src="" alt="iniFoto">
+                            <figcaption>TRA</figcaption>
                           </figure>
                      </header>
                      <section id="profil">
@@ -60,23 +60,22 @@
                             
                         <table border="1">
                            <tr>
-                               <td>Jurusan</td>
-                               <td>Teknik Informatika</td>
+                               <td>SpeedTest</td>
+                               <td><a href="http://userku.indoweb.xyz/st/">disini</a></td>
                            </tr>
                            <tr>
-                               <td>Email</td>
-                               <td><a href="mailto:septriputraw@gmail.com">septriputraw@gmail.com</a></td>
+                               <td>More</td>
+                               <td><a href="badas-bae.blogspot.com">info</a></td>
                            </tr>
                            <tr>
-                               <td>Alamat</td>
-                               <td><a href="/">disini</a></td>
+                               <td>TFIDF</td>
+                               <td><a href="http://userku.indoweb.xyz/JS/TF">disini</a></td>
                            </tr>
                         </table>
                      </section>
                 </article>
             </aside>
         </main>
-    <script src="assets/hi.js"></script>
     </body>
 
     <footer>TRA &copy; 2020 &trade; IF 16</footer>
